--- a/zero-inst/NEWS
+++ b/zero-inst/NEWS
@@ -4,6 +4,10 @@ Changes since 0.1.14:
 
 * The MD5 checksum for downloaded archives is now checked.
 
+* Lots of fixed-sized buffers were converted to dynamically-sized ones.
+
+* GPG signatures are verified when updating a site index (needs auditing).
+
 Changes since 0.1.13:
 
 * 0refresh can be given a path and a date (like 0run), and only does
