--- a/zero-inst/NEWS
+++ b/zero-inst/NEWS
@@ -1,3 +1,8 @@
+Changes since 0.1.21:
+
+* Use --bzip2 option to tar rather than -j to support older versions
+  (agsb).
+
 Changes since 0.1.20:
 
 * More helpful error message when an index is incorrectly signed (reported
