--- a/zero-inst/NEWS
+++ b/zero-inst/NEWS
@@ -3,6 +3,8 @@ Changes since 0.1.21:
 * Use --bzip2 option to tar rather than -j to support older versions
   (agsb).
 
+* Errors from wget are now logged.
+
 Changes since 0.1.20:
 
 * More helpful error message when an index is incorrectly signed (reported
