When running configure with --with-distcheck, don't check that the supplied user name exists (for packagers).

--- a/zero-inst/NEWS
+++ b/zero-inst/NEWS
@@ -1,3 +1,6 @@
+* When running configure with --with-distcheck, don't check that the supplied
+  user name exists (for packagers).
+
 * Test for bzip2, tar, gzip, wget and gpg on startup.
 
 Changes since 0.1.21:
