--- a/lazyfs-linux/NEWS
+++ b/lazyfs-linux/NEWS
@@ -1,3 +1,6 @@
+* Use /sbin prefix for depmod and modprobe, in case it's not in PATH (Alastair
+  Porter).
+
 Changes since 0.1.20:
 
 * Use new f_mapping field to work with Linux kernels >= 2.6.2 (reported by
