--- a/lazyfs-linux/NEWS
+++ b/lazyfs-linux/NEWS
@@ -1,9 +1,11 @@
+Version 0.1.26 (changes since 0.1.25)
+
 * Check that check.py is executable (reported by Olivier Kaloudoff).
 
 * Workaround for missing put_filp() function in Linux 2.6.10 (reported by
   Martin Lucina).
 
-Changes since 0.1.24
+Version 0.1.25 (changes since 0.1.24)
 
 * Implemented poll for files. Before, select() would indicate that the file
   was readable, but the actual read would block anyway.
