--- a/zero-inst/NEWS
+++ b/zero-inst/NEWS
@@ -1,7 +1,9 @@
+Version 0.1.27:
+
 * Make the URL the last argument for wget, as some versions require this
   (Peter Prohaska).
  
-Changes since 0.1.25:
+Version 0.1.26 (changes since 0.1.25):
 
 * Added new unittest suite (though not with many tests in it yet).
 
