* Added unit tests to check that changes to the mtime and permissions trigger   an update (permissions bug reported by Wayne Scott). Fixed permissions bug.

--- a/lazyfs-linux/NEWS
+++ b/lazyfs-linux/NEWS
@@ -1,5 +1,5 @@
 * Added unit tests to check that changes to the mtime and permissions trigger
-  an update (permissions bug reported by Wayne Scott).
+  an update (permissions bug reported by Wayne Scott). Fixed permissions bug.
 
 Version 0.1.26 (changes since 0.1.25)
 
